# UT3-DAQCS

./: README.md
Clients/TestTANGOClient/: CMakeLists.txt  main.cpp
DeviceServers/AlignmentSystemServer/: AlignmentSystemServer.multi.xmi  CMakeLists.txt  MultiClassesFactory.cpp  main.cpp
DeviceServers/AlignmentSystemServer/Basler/: BaslerCamera.cpp  BaslerCamera.h  BaslerCamera.xmi  BaslerCameraClass.cpp  BaslerCameraClass.h  BaslerCameraStateMachine.cpp  CMakeLists.txt  ClassFactory.cpp  main.cpp
DeviceServers/AlignmentSystemServer/PCO/: CMakeLists.txt  Camera.cpp  CameraClass.cpp  CameraClass.h  ClassFactory.cpp  PCOCamera.cpp  PCOCamera.h  PCOCamera.xmi  PCOCameraClass.cpp  PCOCameraClass.h  PCOCameraStateMachine.cpp  main.cpp
DeviceServers/TestMultipleDeviceClassServer/: CMakeLists.txt  MeasurementSystem.multi.xmi  MultiClassesFactory.cpp  main.cpp
DeviceServers/TestMultipleDeviceClassServer/DevA/: CMakeLists.txt  ClassFactory.cpp  DeviceA.cpp  DeviceA.h  DeviceA.xmi  DeviceAClass.cpp  DeviceAClass.h  DeviceAStateMachine.cpp  main.cpp
DeviceServers/TestMultipleDeviceClassServer/DevB/: CMakeLists.txt  ClassFactory.cpp  DeviceB.cpp  DeviceB.h  DeviceB.xmi  DeviceBClass.cpp  DeviceBClass.h  DeviceBStateMachine.cpp  main.cpp
PCO/: CMakeLists.txt  Camera.cpp  Camera.h  Camera.xmi  CameraClass.cpp  CameraClass.h  CameraStateMachine.cpp
